[package]
name = "forge_engine"
description = "Forge Engine"
version = "0.1.0"
authors = ["James Sumihiro <j.sumihiro@digipen.edu>"]
keywords = ["game", "engine", "forge", "vulkan"]
categories = ["game-engines"]
edition = "2018"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
num = "0.3.1"
winit = "0.24.0"
tobj = "0.1.10"
cgmath = "0.18.0"
memoffset = "0.6"
shaderc = "0.7.0"